@@ -3,6 +3,9 @@ Changelog
 
 5.2-dev - (unreleased)
 ----------------------
+* Bug fix: fix googleEarthView logic to use IGeoTagged information instead of 
+  IGeoPositioned
+  [ichimdav #5386]
 * Bug fix: fixed google_earth page template from breaking on soer pages 
   [ichimdav #5386]
 * Bug fix: return a number instead of a boolean for the max number in syndication
